# tightny-lang

./: .gitignore  ENUNCIADO.md  EXAMPLE.md  Makefile  README.md  READMEAI.md  pyproject.toml
codigo/: main.py  tightny.g4
codigo/semantic/: errors.py  semantic_visitor.py  symbol_table.py
codigo/tests/: example.ty  o_arrays.ty  o_comments.ty  o_control_flow.ty  o_declaracion.ty  o_example.ty  o_expressions.ty  o_struct_enum.ty  run_tests.sh  x_arrays.ty  x_comments.ty  x_control_flow.ty  x_declaracion.ty  x_example.ty  x_expressions.ty  x_init_test.ty  x_semantic_test.ty  x_struct_enum.ty
examples/: example.cpp  example.ty
scripts/: generate_parser.py
src/tightny/: __main__.py
src/tightny/backend/: code_generator.py
src/tightny/grammar/: tightny.g4
src/tightny/semantic/: errors.py  semantic_visitor.py  symbol_table.py
tests/: basic.ty  calls.ty  comment.ty  constants.ty  error_semantic.ty  error_syntax.ty  expressions.ty  if_else.ty  large.ty  while.ty
